# browser-pilot

./: .gitignore  LICENSE  README.md  dom-extract.js  pilot.py  pyproject.toml
extras/: __init__.py  demo_panel.js  mcp_server.py  parallel.py  record.py  serve.py  stealth.py  workflow.py
